--- a/config/database.yml
+++ b/config/database.yml
@@ -11,7 +11,7 @@
 #
 default: &default
   adapter: mysql2
-  encoding: utf8mb4
+  encoding: utf8
   pool: <%= ENV.fetch("RAILS_MAX_THREADS") { 5 } %>
   username: root
   password:
@@ -50,5 +50,6 @@ test:
 production:
   <<: *default
   database: kochi_okome_market_production
-  username: kochi_okome_market
-  password: <%= ENV['KOCHI_OKOME_MARKET_DATABASE_PASSWORD'] %>
+  username: root
+  password: <%= ENV['DATABASE_PASSWORD'] %>
+  socket: /var/lib/mysql/mysql.sock
